--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,175 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100vh;
+    font-family: 'Advent Pro', sans-serif;
+    overflow-x: hidden;
+}
+/* Header */
+header{
+    width: 100%;
+    height: 80px;
+    overflow: hidden;
+    background-color: #11272b;
+    display: flex;
+    z-index: 2;
+}
+.width{
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 auto;
+}
+header .width .logo{
+    width: 3.5em;
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+}
+header .width .logo img{
+    width: 100%;
+}
+header .width nav ul{
+    list-style: none;
+    padding: 0;
+    margin: 0 40px 0 0;
+}
+header .width nav ul li{
+    display: inline-block;
+}
+header .width nav ul li a{
+    text-decoration: none;
+    color: white;
+    margin: 0 20px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    position: relative;
+}
+header .width nav ul li a:before{
+    content: '';
+    position: absolute;
+    bottom: -3px;
+    left: 0;
+    transition: .5s;
+    width: 0;
+    height: 1px;
+    background-color: #D8A016;
+}
+header .width nav ul li:hover a:before{
+    width: 80%;
+}
+/* Home */
+main{
+    position: relative;
+}
+main .background-image{
+    background: url("https://lamborghini-huracan.web.app/images/showcase-image.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: block;
+    width: 100%;
+    height: 600px;
+}
+.homesection2{
+    display: flex;
+    align-items: center;
+    padding: 30px 0;
+}
+.homesection2 .section2detail{
+    padding: 0 50px 0 0;
+}
+.homesection2 .section2detail h3{
+    color: grey;
+    margin: 0;
+    font-size: 2em;
+    font-weight: bold;
+}
+.homesection2 .section2detail h1{
+    color: #D8A016;
+    margin: 0;
+    font-size: 3em;
+    font-weight: bolder;
+}
+.homesection2 .section2detail p{
+    color: rgb(53, 53, 53);
+    font-size: 19px;
+    letter-spacing: 1px;
+}
+.homesection2 .section2img{
+    width: 100%;
+}
+.topfooter{
+    background-color: #20535d;
+    padding: 30px 0;
+}
+.topfooter .topfooter1{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.topfooter .topfooter1 .topfooterdetail1,
+.topfooter .topfooter1 .topfooterdetail2,
+.topfooter .topfooter1 .topfooterdetail3,
+.topfooter .topfooter1 .topfooterdetail4{
+    text-align: center;
+}
+.topfooter .topfooter1 .topfooterdetail1 i,
+.topfooter .topfooter1 .topfooterdetail2 i,
+.topfooter .topfooter1 .topfooterdetail3 i,
+.topfooter .topfooter1 .topfooterdetail4 i{
+    font-size: 3.5em;
+    color: rgb(184, 138, 23);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.topfooter .topfooter1 .topfooterdetail1 h2,
+.topfooter .topfooter1 .topfooterdetail2 h2,
+.topfooter .topfooter1 .topfooterdetail3 h2,
+.topfooter .topfooter1 .topfooterdetail4 h2{
+    margin: 10px 0 0 0;
+    color: rgb(209, 207, 207);
+    letter-spacing: 1px;
+}
+/* Footer */
+.width2{
+    width: 80%;
+    margin: 0 auto;
+}
+footer{
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+    background-color: #11272b;
+    display: flex;
+    z-index: 2;
+    padding: 40px 0;
+}
+footer nav ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+}
+footer nav ul li{
+    margin: 0 10px;
+}
+footer nav ul li i{
+    background-color: #D8A016;
+    color: rgb(29, 29, 29);
+    padding: 15px;
+    transition: .5s;
+    font-size: 20px;
+}
+footer nav ul li:hover i{
+    margin-top: -10px;
+}
+.copyright{
+    text-align: center;
+    color: white;
+    letter-spacing: 1px;
+    font-size: 19px;
+    margin-bottom: 0;
 }
